# gl-django-login

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
django_mitid_auth/: __init__.py  exceptions.py  loginprovider.py  middleware.py  urls.py  views.py
django_mitid_auth/dummy/: dummy.py
django_mitid_auth/management/commands/: update_mitid_idp_metadata.py
django_mitid_auth/openid/: openid.py  urls.py
django_mitid_auth/saml/: backend.py  mixins.py  oiosaml.py  saml2.py  urls.py  views.py
django_mitid_auth/saml/oiosaml_attributemaps/: attributemap.py
django_mitid_auth/templates/django_mitid_auth/: bypass.html  login_repeat.html  login_timeout.html
docker/: Dockerfile
src/django_mitid_auth/: __init__.py  apps.py  loginprovider.py  middleware.py  urls.py  views.py
src/django_mitid_auth/dummy/: dummy.py
src/django_mitid_auth/management/commands/: update_mitid_idp_metadata.py
src/django_mitid_auth/openid/: openid.py  urls.py
src/django_mitid_auth/saml/: backend.py  mixins.py  oiosaml.py  saml2.py  urls.py  views.py
src/django_mitid_auth/saml-old/: oiosaml.py  saml2.py  urls.py
src/django_mitid_auth/saml/oiosaml_attributemaps/: attributemap.py
src/django_mitid_auth/templates/django_mitid_auth/: error.html  login_assurance.html  login_no_cprcvr.html  no_cprcvr.html
src/login/: middleware.py  urls.py  views.py
src/login/openid/: openid.py
src/login/saml/: oiosaml.py  saml2.py  urls.py  views.py
src/login/templates/login/: error.html
