[project]
name = "gl-mitid"
version = "0.0.0"  # versioning handled by conventional commits
description = "MitID middle layer"
authors = [
    {name = "Magenta ApS", email="info@magenta.dk"}
]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/gronlandsprojekter/gldjangologin"
keywords = []
packages = [{include = "django_mitid_auth"}]
requires-python = ">=3.11,<4.0"
dependencies = [
    "xmltodict==1.0.2",
    "django>=5",
    "pysaml2==7.5.4",
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
coverage = "7.13.0"
mypy = "1.19.0"
pydantic = "2.12.5"
types-xmltodict = "1.0.1.20250920"
types-requests = "2.32.4.20250913"
types-pysaml2 = "1.0.1"
django-types = "0.22.0"

[tool.mypy]
python_version = "3.12"
warn_return_any = "True"
warn_unused_configs = "True"
plugins = "pydantic.mypy"

[tool.coverage.run]
omit = []

[tool.coverage.report]
omit = []
