[project]
name = "gl-mitid"
version = "0.0.0"  # versioning handled by conventional commits
description = "MitID middle layer"
authors = [
    {name = "Magenta ApS", email="info@magenta.dk"}
]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/gronlandsprojekter/gldjangologin"
keywords = []
requires-python = ">=3.11,<4.0"
dependencies = [
    "xmltodict==1.0.4",
    "django>=5",
    "pysaml2==7.5.4",
]

[tool.poetry]
packages = [{include = "django_mitid_auth"}]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
coverage = "7.13.4"
mypy = "1.19.1"
pydantic = "2.12.5"
types-xmltodict = "1.0.1.20260113"
types-requests = "2.32.4.20260107"
types-pysaml2 = "1.0.1"
django-types = "0.23.0"

[tool.mypy]
python_version = "3.12"
warn_return_any = "True"
warn_unused_configs = "True"
plugins = "pydantic.mypy"

[tool.coverage.run]
omit = []

[tool.coverage.report]
omit = []
