[metadata]
name = django_mitid_auth
version = 1.3.0
author = Lars Peter Thomsen
author_email = larsp@magenta.dk
description = Citizen login handling for django projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magenta-aps/GlDjangoLogin
project_urls =
    Bug Tracker = https://github.com/magenta-aps/GlDjangoLogin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pysaml2
include_package_data = True

[options.packages.find]
where = src
